# fish-speech

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .project-root  .readthedocs.yaml  404.html  AGENTS.md  API_FLAGS.txt  CLAUDE.md  Dockerfile-debug  FIRST_WORDS_FIX_PR.md  Fish-SoVITS  LICENSE  Makefile  README-fishspeech.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  Start_Agent.md  compose.base.yml  compose.cuda.yml  compose.rocm.yml  compose.yml  conversation.py  data  demo.txt  diff.diff  docker-compose.dev.yml  dockerfile  dockerfile.dev  ds_config.json  entrypoint.sh  fastapi.ipynb  fine-tune.py  finetune.sh  fix_first_words_missing.py  index.html  inference.ipynb  inference_webui.py  (+25 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json  post_create.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build-dev.yml  build-docker-image.yml  build-linux-image.yml  build-windows-package.yml  data-server.yml  docs.yaml  docs.yml  stale.yml
README.ar/: index.html
README.es/: index.html
README.ja/: index.html
README.ko/: index.html
README.pt-BR/: index.html
README.zh/: index.html
apex-engine-debugger/: index.html  tsconfig.app.json  tsconfig.node.json
apex-engine-debugger/src/: App.tsx
ar/: index.html
ar/README.ar/: index.html
ar/README.es/: index.html
ar/README.ja/: index.html
ar/README.ko/: index.html
ar/README.pt-BR/: index.html
ar/README.zh/: index.html
ar/finetune/: index.html
ar/inference/: index.html
ar/install/: index.html
ar/samples/: index.html
ar/server/: index.html
awesome_webui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
awesome_webui/src/: App.tsx  index.css
data_server/: Cargo.toml  build.rs
data_server/src/: main.rs
docker/: Dockerfile
docs/: CNAME  README.ar.md  README.es.md  README.ja.md  README.ko.md  README.pt-BR.md  README.zh.md  docker-32gb-rtx5090.md  index.md  multi_speaker_guide.md  quantization.md  requirements.txt
docs/api/: inference.md
docs/ar/: examples.md  finetune.md  index.md  inference.md  install.md
docs/en/: examples.md  finetune.md  index.md  inference.md  install.md  overview.md  samples.md  server.md  start_agent.md  voicereel.md
docs/es/: finetune.md  index.md  inference.md  install.md  server.md
docs/investigation/: emotion-tags-investigation.md
docs/ja/: examples.md  finetune.md  index.md  inference.md  install.md  samples.md  start_agent.md
docs/ko/: examples.md  finetune.md  index.md  inference.md  install.md  samples.md  start_agent.md
docs/pt/: examples.md  finetune.md  index.md  inference.md  install.md  samples.md  start_agent.md
docs/stylesheets/: extra.css
docs/zh/: examples.md  finetune.md  index.md  inference.md  install.md  overview.md  samples.md  start_agent.md
en/: index.html
en/finetune/: index.html
en/inference/: index.html
en/samples/: index.html
examples/: find_speaker_voice.py  multi_speaker_housing_dialogue.py
finetune/: index.html
fish_speech/: content_sequence.py  conversation.py  scheduler.py  test.py  tokenizer.py  tokenizer_s1.py  train copy.py  train.py
fish_speech/callbacks/: __init__.py  audio_sample.py  grad_norm.py  progress_bar.py
fish_speech/configs/: base.yaml  firefly_gan_vq.yaml  hubert_vq.yaml  hubert_vq_diffusion.yaml  llama_finetune.yaml  llama_pretrain.yaml  modded_dac_vq.yaml  text2semantic.yaml  text2semantic_agent.yaml  text2semantic_finetune.yaml  text2semantic_finetune_lora.yaml  text2semantic_finetune_spk.yaml  text2semantic_multi.yaml  text2semantic_pretrain.yaml  text2semantic_pretrain_large.yaml  (+18 more)
inference/: index.html
install/: index.html
ja/: index.html
ko/: index.html
preparing_data/: split_filelist.py  to_flac.py  whisper_asr.py
production/: fish-speech-supervisor.conf  fish-speech.service  fish_speech_production_api.py  init.sh  model_check.py  start_fish_speech_production.sh
pt/: index.html
raw_data/: pre_dataset.py
samples/: index.html
scripts/: e2e_memory.sh  e2e_smoke.sh  preencode.sh  run_server_32gb.sh  ttfa_smoke.py  upload_references.sh
search/: search_index.json
server/: index.html
speech_lm/: dataset.py  init_model.py  logger.py  scheduler.py  train.py
start_agent/: index.html
temp/: codes_0.npy
test/: ref.txt  text.txt
tests/: __init__.py  conftest.py  test_audio_size_bound.py  test_debug_memory_dump.py  test_docs.py  test_inference_engine.py  test_max_new_tokens_dos.py  test_pickle_rce_guard.py  test_reference_compatibility_endpoint.py  test_reference_loader_discrimination.py  test_reference_payload_resolution.py  test_server.py  test_text2semantic_streaming.py  test_tts_request_schema.py  test_voicereel_client.py  test_voicereel_e2e.py  test_voicereel_infra.py
tools/: api.py  api_client.py  api_client_simple.py  api_server.py  auto_rerank.py  banned_code.py  build_vq_dataset.py  build_vq_text.py  calculate_hubert_features.py  commons.py  download_models.py  e2e_webui.py  export-onnx.py  extract_model.py  extract_whisper_vq_weights.py  file.py  fish_e2e.py  fish_speech_production_api.py  fun_asr.py  gen_ref.py  infer_vq.py  log.py  memory_metrics.py  merge_asr_files.py  msgpack_api.py  post_api.py  preencode_references.py  prepare_dataset.py  run_webui.py  schema.py  smart_pad.py  split_filelist.py  split_protos.py  to_flac.py  webui.py  whisper_asr.py
voicereel/: Dockerfile  PRD.md  README.md  __init__.py  caption.py  celery_app.py  celeryconfig.py  client.py  db.py  docker-compose.yml  e2e.md  flask_app.py  server.py  task_queue.py  tasks.py  todo.md
zh/: index.html
(+323 files in other folders)
