[package]
name = "data_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
prost = "0.12.3"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["full"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
